[tool.poetry]
name = "ambassador"
version = "0.1.0"
description = "submodule used in the_embassy"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
go-task-bin = "^3.43.3"
python-avatars = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
